# goit-python-web-hw9

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
database/: config.ini  connect.py  models.py  seeds.py
